--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "apexcharts": "^3.35.4",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
-    "react-dom": "^18.2.0",
-    "react-spring-3d-carousel": "^1.2.1",
-    "react-with-gesture": "^4.0.8"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
